# Bitcoin-simplified

./: .gitignore  CMakeLists.txt  README.md
data/: LOG
include/ecdsa/: key.h
libs/sha256/: SHA256.cpp  SHA256.h
src/: block.cpp  block.h  blockchain.cpp  blockchain.h  main.cpp  proofofwork.cpp  proofofwork.h  transaction.cpp  transaction.h  utils.cpp  utils.h  wallet.cpp  wallet.h
test/: test-ver-1.txt  test.cpp
